fix placement on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,6 +29,14 @@ main {
   @media (min-width: 1000px) {
     margin-top: 350px;
   }
+
+  @media (max-width: 600px) {
+    margin-top: 100px;
+  }
+
+  @media (max-height: 1000px) {
+    margin-top: 260px;
+  }
 }
 
 .header-logo {
