--- a/src/components/slotmachine.module.css
+++ b/src/components/slotmachine.module.css
@@ -8,6 +8,10 @@
   align-items: center;
   justify-content: center;
   width: 100%;
+
+  @media (max-width: 100px) {
+    margin-top: 100px;
+  }
 }
 
 @keyframes enterBottom {
@@ -86,7 +90,7 @@
   }
 
   @media (max-width: 300px) {
-    transform: scale(0.4);
+    transform: scale(0.3);
     margin: -80px 0;
   }
 
@@ -275,6 +279,7 @@
   animation-delay: 0.5s, 1s;
   animation-fill-mode: forwards, forwards;
   animation-iteration-count: 1, infinite;
+  z-index: 999;
 
   @media (max-width: 1000px) {
     width: 469px;
